# hexlet_pytest

./: pyproject.toml
hexlet_pytest/: example.py  stack.py
