[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["Marat Mukhutdinov <kazanmarat2009@yandex.ru>"]
readme = "README.md"
packages = [{include = "hexlet_pytest"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
