[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["Marat Mukhutdinov <kazanmarat2009@yandex.ru>"]
readme = "README.md"
packages = [{include = "hexlet_pytest"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
